@@ -3,6 +3,9 @@
 	* config-server.ht (Links): Mention that you should add your own
 	e-mail address to the whitelist to facilitate initial testing.
 
+	(Links): Mention that "-" is also an acceptable value for
+	Postfix's recipient_delimiter.
+	
 	(Postfix): Instruct the user to setup LOCAL_DELIVERY_AGENT before
 	setting up .forward.
 
